objects/Bug_Default_Owner_Team__c.object
<CustomObject>
    <description>Used to</description>
    <fields>
        <fullName>Bug_Admin__c</fullName>
        <description>To store the Bug admin id</description>
        <inlineHelpText>To store the Bug admin id</inlineHelpText>
        <label>Bug Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug_BugTeam__c</fullName>
        <description>To store the bug team information</description>
        <inlineHelpText>To store the bug team information</inlineHelpText>
        <label>Bug Team</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug_Owners__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bug_Default_Owner_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Type_A__c</fullName>
        <label>Sub Type A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type_B__c</fullName>
        <label>Sub Type B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type_C__c</fullName>
        <label>Sub Type C</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type_D__c</fullName>
        <label>Sub Type D</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Bug Default Owner &amp; Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sub_Type_A__c</columns>
        <columns>Sub_Type_B__c</columns>
        <columns>Sub_Type_C__c</columns>
        <columns>Sub_Type_D__c</columns>
        <columns>Bug_Owners__c</columns>
        <columns>Bug_BugTeam__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BugCS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Default Owner &amp; Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>